syntax = "proto3";

import "cloud/dataplatform/api/connman/common.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/connman";

package yandex.cloud.priv.connman.v1;

message RedisAuth {
    oneof security {
        Password password = 1;
    }
}
message RedisCluster {
    repeated string hosts = 1;
    int64 port = 2;
    int64 sentinel_port = 3;
    TLSParams tls_params = 4;
    string cluster_name = 5;
}
message RedisConnection {
    oneof connection {
        RedisCluster on_premise = 1;
        string managed_cluster_id = 2;
    }
    RedisAuth auth = 3;
}
